--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -14,7 +14,7 @@
    "id": "62e05101",
    "metadata": {},
    "source": [
-    "#### Life cycle of Machine learning Project\n",
+    "#### Life cycle of Project\n",
     "\n",
     "- Understanding the Problem Statement\n",
     "- Data Collection\n",
